--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   myapp:
     build: .
     ports:
-      - '8080:8080'
+      - '9090:8080'
     depends_on:
       - mysql
     networks:
@@ -13,11 +13,13 @@ services:
         condition: on-failure
 
   mysql:
-    image: mysql:latest
+    build:
+      context: .
+      dockerfile: Dockerfile-mysql
     networks:
       - mynet
     ports:
-        - '3306:3306'
+        - '13306:3306'
     environment:
       MYSQL_DATABASE: ClassMoments
       MYSQL_ROOT_PASSWORD: 123456
